2011-04-11  Joseph Myers  <joseph@codesourcery.com>

	* common.opt (Tbss=, Tdata=, Ttext=): New options.

2011-04-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2011-04-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/alpha/osf5.h (MAX_OFILE_ALIGNMENT): Define.

2011-04-09  Duncan Sands  <baldrick@free.fr>

	* tree.c (array_type_nelts): Bail out if TYPE_MAX_VALUE not set.

2011-04-08  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR target/47829
	gcc/config.gcc: disable unwind table generation for crtbegin/crtend
	on i386-*-freebsd.

2011-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48377
	* tree-vect-data-refs.c (vector_alignment_reachable_p): Set
	is_packed to true even for types with smaller TYPE_ALIGN than
	TYPE_SIZE.

2011-04-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md: Update copyright year.
	(avx_cmp<ssescalarmodesuffix><mode>3): Add missing output
	register constraint.
	(*vec_concatv2sf_avx): Fix wrong register constraint in
	alternative 3 of operand 1.
	(*vec_set<mode>_0_avx): Avoid combining registers from different
	units in a single alternative.
	(*vec_set<mode>_0_sse4_1): Ditto.
	(*vec_set<mode>_0_sse2): Ditto.
	(vec_set<mode>_0): Ditto.
	(sse2_storehpd): Ditto.
	(sse2_loadhpd): Ditto.
	(sse4_1_insertps): Use nonimmediate_operand for operand 2.
	* config/i386/predicates.md (sse_comparison_operator): Do not
	define as special predicate.

2011-04-07  Jakub Jelinek  <jakub@redhat.com>

	PR debug/48343
	* combine.c (combine_instructions): Add last_combined_insn,
	update it if insn is after it, pass it to all try_combine calls.
	(try_combine): Add last_combined_insn parameter, pass it instead of
	i3 to propagate_for_debug.

2011-04-07  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline
	2011-03-26  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/48144
	* sel-sched-ir.c (merge_history_vect): Factor out from ...
	(merge_expr_data): ... here.